# OmniWindow

./: CMakeLists.txt  LICENSE  README.md  switch-config.template.json  switch-shell.template.txt
Exp-1/: .gitignore  CMakeLists.txt  README.md  merge-result.py  run.sh
Exp-1/apps/: CMakeLists.txt  completed_flow.cpp  ddos.cpp  evaluate.hpp  new_tcp_connections.cpp  port_scan.cpp  slowloris_attack.cpp  ssh_brute.cpp  superspreader.cpp  syn_flood.cpp
Exp-1/include/: Distinct.hpp  Hash.hpp  Query.hpp  Reduce.hpp  Result.hpp  Trace.h  utils.hpp
Exp-1/lib/: CMakeLists.txt  Hash.cpp  Trace.cpp
Exp-1/result/: completed_flow.txt  ddos.txt  new_tcp_connections.txt  port_scan.txt  precision.csv  recall.csv  slowloris_attack.txt  ssh_brute.txt  superspreader.txt  syn_flood.txt
Exp-2/: CMakeLists.txt  README.md  build.sh
Exp-2/consistency/: CMakeLists.txt  exp.cpp
Exp-2/include/: AwareHash.h  CMSketch.h  CUSketch.h  HashPipe.h  LinearCounting.h  MRBP.h  MVSketch.h  SuMax.h  VectorBF.h  config.h  flowkey.h  hyperLogLog.h  lossRadar.h  omniWindowSketch.h  sketchBase.h  sl-cm.h  sl-hll.h  sl-hp.h  sl-lc.h  sl-mv.h  sl-sm.h  sl-ss.h  sl-vbf.h  slidingSketch.h  spreadSketch.h  tumblingWindowSketch.h  utils.h
Exp-2/omni_window/: CMakeLists.txt  exp.cpp
Exp-2/sliding_sketches/: CMakeLists.txt  exp.cpp
Exp-2/tumbling_window/: CMakeLists.txt  exp.cpp
Exp-dc/: CMakeLists.txt  README.md  get-keys.cpp  switch.py
Exp-dc/cpc/: host.cpp  switch.p4
Exp-dc/cpc-rdma/: host.cpp  switch.p4
Exp-dc/dpc/: host.cpp  switch.p4
Exp-dc/dpc-rdma/: host.cpp  switch.p4
Exp-dc/include/: CountMin.hpp
Exp-dc/os/: switch.p4
Exp-dc/ow/: host.cpp  switch.p4
Exp-dc/ow-rdma/: host.cpp  switch.p4
Exp-dc/reset-ow/: host.cpp  switch.p4
apps/: CMakeLists.txt
apps/completed-flow/: host.cpp  switch.p4  switch.py
apps/ddos/: host.cpp  switch.p4
apps/new-tcp-connections/: host.cpp  switch.p4  switch.py
apps/port-scan/: host.cpp  switch.p4  switch.py
apps/slowloris-attack/: host.cpp  switch.p4  switch.py
apps/ssh-brute/: host.cpp  switch.p4  switch.py
apps/superspreader/: switch.p4
apps/syn-flood/: host.cpp  switch.p4  switch.py
include/: DataCol.hpp  FlowKey.hpp  HashTable.hpp  NetworkStream.hpp  RDMA.h  dpdk_toolchain.h
include/dpdk_toolchain/: packet_data.h  protocol_headers.h
lib/: CMakeLists.txt  RDMA.cpp  dpdk_toolchain_cpp.cpp
p4-include/: bloom-filter.p4  count-min.p4  data-col.p4
tools/: CMakeLists.txt  trace.cpp
