set(CM_NUM "4" CACHE STRING "the number of hash functions")

if(${CM_NUM} EQUAL 1)
  set(MAX_CM_NUM 2)
elseif(${CM_NUM} EQUAL 2)
  set(MAX_CM_NUM 2)
elseif(${CM_NUM} EQUAL 3)
  set(MAX_CM_NUM 4)
elseif(${CM_NUM} EQUAL 4)
  set(MAX_CM_NUM 4)
else()
  message(FATAL_ERROR "Invalid CM_NUM: ${CM_NUM}")
endif()

add_p4(reset-os-switch os/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(reset-ow-switch reset-ow/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)

add_p4(dc-os-switch os/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-ow-switch ow/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-ow-rdma-switch ow-rdma/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-dpc-switch dpc/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-dpc-rdma-switch dpc-rdma/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-cpc-switch cpc/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)
add_p4(dc-cpc-rdma-switch cpc-rdma/switch.p4 "-DP4FLAGS=\"-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM}\"" switch.py)

if(NOT ${IS_SWITCH})
  include_directories(include)
  add_definitions(-DCM_NUM=${CM_NUM} -DMAX_CM_NUM=${MAX_CM_NUM})

  link_libraries(crcutil)
  add_executable(get-keys get-keys.cpp)
  target_link_libraries(get-keys pcap)

  link_libraries(dpdk-toolchain-cpp)
  add_executable(reset-ow-host reset-ow/host.cpp)
  add_executable(dc-ow-host ow/host.cpp)
  add_executable(dc-dpc-host dpc/host.cpp)
  add_executable(dc-cpc-host cpc/host.cpp)

  link_libraries(rdma-tools)
  add_executable(dc-ow-rdma-host ow-rdma/host.cpp)
  add_executable(dc-dpc-rdma-host dpc-rdma/host.cpp)
  add_executable(dc-cpc-rdma-host cpc-rdma/host.cpp)
endif()
